@@ -24,6 +24,7 @@
 #import "CCTiledGridAction.h"
 #import "CCEaseAction.h"
 #import "CCTouchDispatcher.h"
+#import "CCRenderTexture.h"
 #import "Support/CGPointExtension.h"
 
 enum {
@@ -766,13 +767,13 @@ enum {
 	
 	
 	CCNode *f = [self getChildByTag:kSceneFade];
-
+	
 	CCIntervalAction *a = [CCSequence actions:
-							[CCFadeIn actionWithDuration:duration/2],
-							[CCCallFunc actionWithTarget:self selector:@selector(hideOutShowIn)],
-							[CCFadeOut actionWithDuration:duration/2],
-							[CCCallFunc actionWithTarget:self selector:@selector(finish)],
-						 nil ];
+						   [CCFadeIn actionWithDuration:duration/2],
+						   [CCCallFunc actionWithTarget:self selector:@selector(hideOutShowIn)],
+						   [CCFadeOut actionWithDuration:duration/2],
+						   [CCCallFunc actionWithTarget:self selector:@selector(finish)],
+						   nil ];
 	[f runAction: a];
 }
 
@@ -780,6 +781,104 @@ enum {
 {
 	[super onExit];
 	[self removeChildByTag:kSceneFade cleanup:NO];
+}
+@end
+
+
+//
+// Cross Fade Transition
+//
+@implementation CCCrossFadeTransition
+
+// update render Textures 
+-(void) draw
+{
+	CCLayer * layer = (CCLayer *) [self getChildByTag:kSceneFade];
+	CCRenderTexture * renderTexture1 = (CCRenderTexture *) [layer.children objectAtIndex:0];
+	CCRenderTexture * renderTexture2 = (CCRenderTexture *) [layer.children objectAtIndex:1];
+	
+	// update texture 1 for inScene
+	[renderTexture1 begin];
+	[inScene visit];
+	[renderTexture1 end];
+	
+	// update texture 2 for outScene
+	[renderTexture2 begin];
+	[outScene visit];
+	[renderTexture2 end];
+}
+
+-(void) onEnter
+{
+	[super onEnter];
+	
+	// create a transparent color layer
+	// in which we are going to add our rendertextures
+	ccColor4B  color = {0,0,0,0};
+	CGSize size = [[CCDirector sharedDirector] winSize];
+	CCColorLayer * layer = [CCColorLayer layerWithColor:color];
+	
+	// create the first render texture for inScene
+	CCRenderTexture * renderTexture1 = [CCRenderTexture renderTextureWithWidth:size.width height:size.height];
+	renderTexture1.sprite.anchorPoint= ccp(0.5f,0.5f);
+	renderTexture1.position = ccp(size.width/2, size.height/2);
+	renderTexture1.anchorPoint = ccp(0.5f,0.5f);
+	
+	// render inScene to its texturebuffer
+	[renderTexture1 begin];
+	[inScene visit];
+	[renderTexture1 end];
+	
+	// create the second render texture for outScene
+	CCRenderTexture * renderTexture2 = [CCRenderTexture renderTextureWithWidth:size.width height:size.height];
+	renderTexture2.sprite.anchorPoint= ccp(0.5f,0.5f);
+	renderTexture2.position = ccp(size.width/2, size.height/2);
+	renderTexture2.anchorPoint = ccp(0.5f,0.5f);
+	
+	// render outScene to its texturebuffer
+	[renderTexture2 begin];
+	[outScene visit];
+	[renderTexture2 end];
+	
+	// create blend functions
+	
+	ccBlendFunc blend1 = {GL_ONE, GL_ONE}; // inScene will lay on background and will not be used with alpha
+	ccBlendFunc blend2 = {GL_SRC_ALPHA, GL_ONE_MINUS_SRC_ALPHA}; // we are going to blend outScene via alpha 
+	
+	// set blendfunctions
+	[renderTexture1.sprite setBlendFunc:blend1];
+	[renderTexture2.sprite setBlendFunc:blend2];	
+	
+	// add render textures to the layer
+	[layer addChild:renderTexture1];
+	[layer addChild:renderTexture2];
+	
+	// initial opacity:
+	[renderTexture1.sprite setOpacity:255];
+	[renderTexture2.sprite setOpacity:255];
+	
+	// create the blend action
+	CCIntervalAction * layerAction = [CCSequence actions:
+									  [CCFadeTo actionWithDuration:duration opacity:0],
+									  [CCCallFunc actionWithTarget:self selector:@selector(hideOutShowIn)],
+									  [CCCallFunc actionWithTarget:self selector:@selector(finish)],
+									  nil ];
+	
+	
+	// run the blend action
+	[renderTexture2.sprite runAction: layerAction];
+	
+	// add the layer (which contains our two rendertextures) to the scene
+	[self addChild: layer z:2 tag:kSceneFade];
+}
+
+// clean up on exit
+-(void) onExit
+{
+	// remove our layer and release all containing objects 
+	[self removeChildByTag:kSceneFade cleanup:NO];
+	
+	[super onExit];	
 }
 @end
 
