@@ -141,6 +141,7 @@
 
 static int sceneIdx=0;
 static NSString *transitions[] = {
+						@"CCCrossFadeTransition",
 						@"CCJumpZoomTransition",
 						@"PageTransitionForward",
 						@"PageTransitionBackward",
