@@ -16,6 +16,7 @@ version 0.9.0-beta - XX-MMM-2009
  . Texture Atlas: uses VBO instead of vertex array list (issue #581)
  . TextureCache: don't use autorelease pool to load images (issue #XXX)
  . Tiles: TMX maps supports sub-directories (issue #539)
+ . Transition: added CrossFadeTransition (issue #646)
 
 version 0.9.0-alpha - 18-Nov-2009
  . All: using CC namespace (issue #520)
